--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,84 @@ body {
     border-radius: 16px;
     padding: 30px;
 }
+header {
+    border-bottom: 1px solid#f9f7fe; 
+    padding: 0 0 30px 0;
+}
+a {
+    color: #885df1;
+}
+
+main {
+    padding: 30px 0;
+}
+.search-form-input {
+    background-color: #f9f7fe; 
+    border: none;
+    border-radius: 6px;
+    width: 80%;
+    font-size: 16px;
+    padding: 20px 25px;
+}
+
+.search-form-button {
+    background-color:#885df1 ;
+    padding: 20px 25px;
+    border: none;
+    font-size: 16pxm;
+    margin-left: 5px;
+    border-radius: 6px;
+    color: white;
+}
+
+.weather-app-data {
+    display: flex;
+    justify-content: space-between;
+}
+
+.weather-app-city {
+    margin: 0;
+    font-size: 38px;
+    line-height: 48px;
+
+}
+
+.weather-app-details {
+    font-size: 16px;
+    color: rgba(39, 33, 66, 0.4);
+    line-height: 20px;
+    font-weight: 900;
+}
+.weather-app-details strong {
+    color:#f65282 ;
+}
+
+.weather-app-container {
+    display: flex;
+}
+.weather-app-icon {
+    font-size: 44px;
+    margin-top: 22px;
+}
+
+.weather-app-temperature {
+    font-size: 80px;
+    margin-left: 10px;
+    font-weight: bold;
+}
+
+.weather-app-unit {
+    margin-top: 16px;
+    font-size: 30px;
+}
+
+
+footer {
+    border-bottom: 1px solid#f9f7fe; 
+    padding: 30px 0 0 0;
+    text-align: center;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.6);
+
+
+}
