--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color:  #f9f7fe;
-    font-family:'Roboto';
+    font-family:  'Roboto';
 }
 
 .weather-app {
@@ -81,6 +81,21 @@ main {
 .weather-app-unit {
     margin-top: 6px;
     font-size: 28px;
+}
+.weather-forecast {
+    margin-top: 20px;
+    text-align: center;
+    color: #000;
+}
+.weather-forecast-date {
+    font-size: 16px;
+    opacity: 0.5;
+}
+ .Weather-forecast-temperature-min {
+    opacity: 0.5;
+}
+.weather-forecast-temperature {
+    font-size: 13px;
 }
 
 
