--- a/src/styles.css
+++ b/src/styles.css
@@ -84,7 +84,8 @@ main {
 }
 .weather-forecast {
     margin-top: 20px;
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
     color: #000;
 }
 .weather-forecast-date {
